force-app/main/default/objects/Work_Order_Equipment__c/Work_Order_Equipment__c.object-meta.xml
<CustomObject>
    <label>Work Order Equipment</label>
    <nameField>
        <displayFormat>WEQ-{000000}</displayFormat>
        <label>Work Order Equipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Equipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>