force-app/main/default/objects/Work_Order_Equipment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <formula>Equipment__r.Contract_Number__c</formula>
    <label>Contract #</label>
    <type>Text</type>
</CustomField>