force-app/main/default/objects/Work_Order_Equipment__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Work Order Equipments</relationshipLabel>
    <relationshipName>Work_Order_Equipments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>