force-app/main/default/objects/Work_Order_Equipment__c/fields/Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>Equipment_ID__c</fullName>
    <formula>Equipment__r.Equipment_ID__c</formula>
    <label>Equipment ID</label>
    <type>Text</type>
</CustomField>