force-app/main/default/objects/Work_Order_Equipment__c/fields/Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Date__c</fullName>
    <formula>Equipment__r.Installation_Date__c</formula>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>