force-app/main/default/objects/Work_Order_Equipment__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <formula>TEXT(Equipment__r.Manufacturer__c)</formula>
    <label>Manufacturer</label>
    <type>Text</type>
</CustomField>