force-app/main/default/objects/Work_Order_Equipment__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>Equipment__r.Model_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model #</label>
    <type>Text</type>
</CustomField>