force-app/main/default/objects/Work_Order_Equipment__c/fields/SEER__c.field-meta.xml
<CustomField>
    <fullName>SEER__c</fullName>
    <formula>Equipment__r.SEER__c</formula>
    <label>SEER</label>
    <type>Text</type>
</CustomField>