force-app/main/default/objects/Work_Order_Equipment__c/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <formula>Equipment__r.Serial_Number__c</formula>
    <label>Serial #</label>
    <type>Text</type>
</CustomField>