force-app/main/default/objects/Work_Order_Equipment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Equipment__r.Type__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>