force-app/main/default/objects/Work_Order_Equipment__c/fields/Warranty_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Date__c</fullName>
    <formula>Equipment__r.Warranty_Date__c</formula>
    <label>Warranty Date</label>
    <type>Date</type>
</CustomField>