force-app/main/default/objects/Work_Order_Equipment__c/fields/Worked_On__c.field-meta.xml
<CustomField>
    <fullName>Worked_On__c</fullName>
    <formula>TEXT(Equipment__r.Worked_On__c)</formula>
    <label>Worked On</label>
    <type>Text</type>
</CustomField>